# todo

./: .gitignore  .gitlab-ci.yml  .todos  README.md  devbox.json  shell.nix  todo.cabal
app/: Main.hs
