cabal-version:   3.4
name:            todo
version:         0.1.0.0
synopsis:        Just type todo cmd-line

-- description:
license:         MIT
license-file:    LICENSE
author:          Sjur Millidahl
maintainer:      sjur.millidahl@statnett.no

-- copyright:
category:        Development
build-type:      Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:

common warnings
  ghc-options: -Wall

executable todo
  import:             warnings
  main-is:            Main.hs

  -- other-modules:
  -- other-extensions:
  build-depends:
    , base
    , text

  hs-source-dirs:     app
  default-language:   GHC2021
  default-extensions:
    LambdaCase
    OverloadedStrings
    TypeApplications
